fixed logo spacing and added link to logo

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -36,7 +36,7 @@ nav li {
   padding-left: 20px;
 }
 nav ul {
-  padding: 10px 0 0 0;
+  padding: 7px 0 0 0;
   margin: 0;
 }
 
@@ -46,6 +46,7 @@ nav a:hover {
 nav li.active a {
   color: var(--secondary-color);
 }
+
 .navigation-link {
   text-decoration: none;
   color: black;
@@ -56,6 +57,7 @@ nav li.active a {
 }
 .small-logo {
   max-width: 50px;
+  padding-top: 8px;
 }
 .name {
   text-align: center;
@@ -177,6 +179,9 @@ nav li.active a {
   .sub-title {
     font-size: 25px;
     padding-bottom: 30px;
+  }
+  nav a {
+    font-size: 12px;
   }
 }
 @media (max-width: 973px) {
